# dlp-native

./: .gitignore  Cargo.toml  README.md  VENDOR.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
crates/unity_dlp_capi/: Cargo.toml  cbindgen.toml
crates/unity_dlp_capi/src/: lib.rs
crates/unity_dlp_cli/: Cargo.toml
crates/unity_dlp_cli/src/: main.rs
crates/unity_dlp_core/: Cargo.toml  build.rs
crates/unity_dlp_core/src/: extract.rs  ffi.rs  lib.rs  logging.rs  python_host.rs
python/unity_dlp_jsc/: pyproject.toml
python/unity_dlp_jsc/unity_dlp_jsc/: __init__.py
scripts/: build-android.sh  build-host.ps1  build-host.sh  build-ios.sh  build-macos-universal.sh  fetch-artifacts.ps1  fetch-artifacts.sh  package-unity.sh  stage_stdlib.py
unity_package/: package.json
unity_package/Editor/: DlpBuildPreprocessor.cs  PluginImportSettings.cs  YtDlpSmokeTest.cs
unity_package/Runtime/: DlpBootstrap.cs  DlpUpdater.cs  VideoInfo.cs  YtDlp.cs  YtDlpNative.cs
