[workspace]
members = [
    "crates/unity_dlp_core",
    "crates/unity_dlp_cli",
    "crates/unity_dlp_capi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
pyo3 = { version = "0.22", features = ["abi3-py312"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
once_cell = "1"
