[package]
name = "unity_dlp_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "unity_dlp"
# rlib is included so unity_dlp_cli can depend on this crate directly.
# cdylib produces the .dll/.dylib/.so for Unity's plugin folder.
# staticlib produces the .a for iOS static linking.
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
pyo3.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
once_cell.workspace = true

[build-dependencies]
cbindgen = "0.27"
zip = "2"
walkdir = "2"
